--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "portfolio project like stackoverflow",
   "main": "src/app.ts",
   "scripts": {
-    "transform" : "tsc -w",
-    "test": "ts-node src/app.ts"
+    "transform": "tsc -w",
+    "dev": "nodemon --watch src --exec npx ts-node src/app.ts",
+    "start": "node src/app.js"
   },
   "author": "wwwcomcom",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "typescript": "^5.2.2"
+    "socket.io-client": "^4.7.2",
+    "typescript": "^5.2.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.6.5",
+    "@types/ws": "^8.5.7",
     "ts-node": "^10.9.1"
   }
 }
