--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "svelte-spa-router": "^3.3.0",
     "typescript": "^5.2.2",
     "ws": "^8.14.2"
   },
