--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.18",
     "@types/node": "^20.6.5",
     "@types/ws": "^8.5.7",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.1"
   }
 }
