--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "gsmoverflow",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "portfolio project like stackoverflow",
-  "main": "src/app.ts",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "transform": "tsc -w",
-    "dev": "nodemon --watch src --exec npx ts-node src/app.ts",
-    "start": "node src/app.js"
-  },
-  "author": "wwwcomcom",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "svelte-spa-router": "^3.3.0",
-    "typescript": "^5.2.2",
-    "ws": "^8.14.2"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-clear",
+    "check": "svelte-check"
   },
   "devDependencies": {
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.6.5",
-    "@types/ws": "^8.5.7",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.1"
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@tsconfig/svelte": "^3.0.0",
+    "rollup": "^3.15.0",
+    "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.1.2",
+    "svelte": "^3.55.0",
+    "svelte-check": "^3.0.0",
+    "svelte-preprocess": "^5.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^2.0.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
